# rust_sql_miniserver

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
common/: Cargo.toml
common/src/models/: acid_sync.rs  db.rs  mod.rs  webserver_models.rs
db_web_client/: Dockerfile  index.html  package.json  tailwind.config.cjs  vite.config.ts
db_web_client/src/: App.tsx  index.css
db_web_client/src/api/: base.ts  index.ts  queryApi.ts
db_web_client/src/components/: DBMessage.tsx  DBTable.tsx
db_web_client/src/hooks/: useDBQuery.ts
db_web_client/src/layouts/: DBMainLayout.tsx
db_web_client/src/types/: dbTypes.ts  index.ts  responseTypes.ts
db_web_client/src/utils/: data-faker.js  sqlGrammar.ts
persistence/: Cargo.toml
persistence/src/table/: column.rs  errors.rs  index.rs  mod.rs  row.rs  table.rs  table_iterator.rs
query_parser/: Cargo.toml
query_parser/src/: main.rs
query_parser/src/parser/: errors.rs  expression_tree.rs  expression_tree_eval.rs  lexer.rs  mod.rs  query_parser.rs  tokenizer.rs
spec/: minisql_spec.drawio
sql_server/: Cargo.toml
sql_server/src/: main.rs
sql_server/src/handlers/: handlers.rs  mod.rs  tests.rs
sql_server/src/models/: app_state.rs
transaction_control/: Cargo.toml
transaction_control/src/: errors.rs  lib.rs
transaction_control/src/queries/: delete.rs  index.rs  insert.rs  mod.rs  select.rs  table.rs
transaction_control/src/utils/: common.rs  db_info.rs  mod.rs  tests.rs
