[package]
name = "sql_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1"
common = { path = "../common" }
transaction_control = { path = "../transaction_control" }
actix-web = "4.2.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
actix-cors = "0.6.4"
